Bugfix regarding text area being clipped by Search Form

--- a/app/src/main/webapp/css/app.css
+++ b/app/src/main/webapp/css/app.css
@@ -59,7 +59,6 @@
 }
 
 .search-form {
-    position: relative;
     padding: 5px;
     width: auto;
     border: 0px solid;
